force-app/main/default/objects/custom_create264__c/custom_create264__c.object-meta.xml
<CustomObject>
    <label>Custom created object264</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects264</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>