force-app/main/default/objects/custom_create264__c/fields/custom_create_264field562__c.field-meta.xml
<CustomField>
    <fullName>custom_create_264field562__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 264field562</label>
    <type>Checkbox</type>
</CustomField>